# xcsoar-tasks

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
benches/: parse.rs  serialize.rs
examples/: parse.rs
examples/visualize/: geojson.rs  main.rs  template.html.j2
examples/visualize/snapshots/: visualize__geojson__tests__geojson_aat_task.snap  visualize__geojson__tests__geojson_fai_task.snap  visualize__geojson__tests__geojson_racing_task.snap
fixtures/: all-oz-types.tsk
src/: lib.rs
src/snapshots/: xcsoar_tasks__tests__parse_aat_task.snap  xcsoar_tasks__tests__parse_all_oz_types.snap  xcsoar_tasks__tests__parse_fai_task.snap  xcsoar_tasks__tests__parse_racing_task.snap  xcsoar_tasks__tests__roundtrip_aat_task.snap  xcsoar_tasks__tests__roundtrip_all_oz_types.snap  xcsoar_tasks__tests__roundtrip_fai_task.snap  xcsoar_tasks__tests__roundtrip_racing_task.snap  xcsoar_tasks__tests__serialize_ugly.snap
