[package]
name = "xcsoar-tasks"
version = "0.0.0"
description = "A Rust library for parsing and writing XCSoar task files"
license = "MIT OR Apache-2.0"
repository = "https://github.com/glide-rs/xcsoar-tasks"
edition = "2024"
exclude = [".github/*", "benches/*", "docs/*", "examples/*", "tests/*", ".gitignore"]

[dependencies]
quick-xml = { version = "0.38.4", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[dev-dependencies]
anyhow = "=1.0.100"
clap = { version = "=4.5.53", features = ["derive"] }
insta = { version = "=1.44.3", features = ["json"] }
minijinja = "=2.9.0"
serde_json = "=1.0.145"
tempfile = "=3.23.0"
webbrowser = "=1.0.6"

[package.metadata.release]
pre-release-commit-message = "Release v{{version}}"
tag-message = ""
pre-release-replacements = [
    { file="README.md", search="xcsoar-tasks = \"[a-z0-9\\.-]+\"", replace="xcsoar-tasks = \"{{version}}\"" },
]
# Disable `cargo publish` since we use CI for publishing
publish = false
